# model_variance

./: .flake8  .gitignore  LICENSE  PLANNING.md  README.md  download_cedar_results.sh  download_graham_results.sh  download_niagara_results.sh  fix_tars.sh  install.sh  macos_requirements.txt  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.sh  pytest_path.sh  pytest_path_cuda.sh  requirements.txt  run_hperturbs.sh  run_python.sh  run_python_cuda.sh  scratch.py  scratch2.py  scratch_results.py  sqlite_scratch.py  xgb_hist_runtimes.json
apptainer/: build_alpine.def  build_centos.def  build_container.sh  build_container_sandbox.sh  convert_container_to_sandbox.sh  convert_sandbox_to_container.sh  manual_download.sh  pilfer_container_files.sh  pilfer_sandbox_files.sh  prepare.sh
apptainer/build_files/: download_torch_wheels.sh
apptainer/helper_scripts/: extract_data.sh
cc_results/: summarize_all_runtimes.py
cc_results/niagara/: summarize_all_runtimes.py
data/: balanced_accuracy_benchmarks.csv  compress.sh  datasets.csv  download_data.py  paper_datasets.csv
drafts/: details.md
scripts/: fit_fast_repeats.py
src/: archival.py  classifier.py  constants.py  dataset.py  enumerables.py  evaluator.py  feature_reduce.py  parallelize.py  perturb.py  plotting.py  reduction.py  repeat_eval.py  results.py  seeding.py  serialize.py  utils.py
test/: helpers.py  test_eval.py  test_hparams.py  test_json.py  test_models.py  test_persistence.py  test_perturb.py  test_quasirandom.py  test_repeat_runtimes.py  test_seeding.py  test_splitting.py  test_tuning.py
(+491 files in other folders)
