[tool.black]
line-length = 90

[tool.isort]
profile = 'black'
skip_gitignore = false
line_length = 90
atomic = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'LOCALFOLDER', 'FIRSTPARTY']
known_local_folder = ['src', 'test', 'tests']

[tool.poetry]
name = "model-variance"
version = "0.0.0"
description = ""
authors = ["Derek M Berger <dmberger.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scikit-learn = "^1.1.2"
scikit-image = "^0.19.3"
pandas = "^1.5.1"
scipy = "^1.9.3"
xgboost = "^1.6.2"
openml = "^0.12.2"
seaborn = "^0.12.1"
tabulate = "^0.9.0"
numba = "^0.56.3"
statsmodels = "^0.13.2"
tqdm = "^4.64.1"
umap-learn = "^0.5.3"
pyarrow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
